--- a/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
@@ -57,6 +57,9 @@ spec:
           snapshot.home.arpa/enabled: "true"
 
     persistence:
+      downloads:
+        enabled: true
+        existingClaim: nfs-downloads-pvc
       incomplete:
         enabled: true
         type: emptyDir
