--- a/kubernetes/apps/storage/kustomization.yaml
+++ b/kubernetes/apps/storage/kustomization.yaml
@@ -7,3 +7,5 @@ resources:
   - ./longhorn/ks.yaml
   - ./nfs-pvc/nfs-tv-pvc.yaml
   - ./nfs-pvc/nfs-downloads-pvc.yaml
+  - ./nfs-pvc/nfs-movies-pvc.yaml
+  - ./nfs-pvc/nfs-calibre-pvc.yaml
