--- a/kubernetes/apps/storage/kustomization.yaml
+++ b/kubernetes/apps/storage/kustomization.yaml
@@ -5,7 +5,9 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./longhorn/ks.yaml
+  - ./minio/ks.yaml
   - ./nfs-pvc/nfs-tv-pvc.yaml
   - ./nfs-pvc/nfs-downloads-pvc.yaml
   - ./nfs-pvc/nfs-movies-pvc.yaml
   - ./nfs-pvc/nfs-calibre-pvc.yaml
+  - ./nfs-pvc/nfs-minio-pvc.yaml
