--- a/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
@@ -59,7 +59,7 @@ spec:
     persistence:
       downloads:
         enabled: true
-        existingClaim: nfs-downloads-pvc.storage
+        existingClaim: nfs-downloads-pvc
       incomplete:
         enabled: true
         type: emptyDir
