--- a/kubernetes/apps/storage/nfs-pvc/nfs-tv-pvc.yaml
+++ b/kubernetes/apps/storage/nfs-pvc/nfs-tv-pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: nfs-tv-pv
-  namespace: storage
+  namespace: media
 spec:
   storageClassName: media-tv
   capacity:
@@ -27,7 +27,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: nfs-tv-pvc
-  namespace: storage
+  namespace: media
 spec:
   accessModes:
     - ReadWriteMany
