--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -11,3 +11,7 @@ resources:
   - ./tautulli/ks.yaml
   - ./bazarr/ks.yaml
   - ./calibre-web/ks.yaml
+  - ./nfs-pvc/nfs-tv-pvc.yaml
+  - ./nfs-pvc/nfs-downloads-pvc.yaml
+  - ./nfs-pvc/nfs-movies-pvc.yaml
+  - ./nfs-pvc/nfs-calibre-pvc.yaml
