--- a/kubernetes/apps/storage/kustomization.yaml
+++ b/kubernetes/apps/storage/kustomization.yaml
@@ -6,3 +6,8 @@ resources:
   - ./namespace.yaml
   - ./longhorn/ks.yaml
   - ./minio/ks.yaml
+  - ./nfs-pvc/nfs-tv-pvc.yaml
+  - ./nfs-pvc/nfs-downloads-pvc.yaml
+  - ./nfs-pvc/nfs-movies-pvc.yaml
+  - ./nfs-pvc/nfs-calibre-pvc.yaml
+  - ./nfs-minio-pvc.yaml
