--- a/kubernetes/apps/storage/nfs-pvc/nfs-downloads-pvc.yaml
+++ b/kubernetes/apps/storage/nfs-pvc/nfs-downloads-pvc.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs-downloads-pv
-  namespace: media
+  name: nfs-downloads
+  namespace: storage
 spec:
-  storageClassName: media-downloads
+  storageClassName: nfs-downloads
   capacity:
     storage: 1Mi
   accessModes:
@@ -25,12 +25,12 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nfs-downloads-pvc
-  namespace: media
+  name: nfs-downloads
+  namespace: storage
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: media-downloads
+  storageClassName: nfs-downloads
   resources:
     requests:
       storage: 1Mi
