--- a/kubernetes/apps/storage/nfs-pvc/nfs-movies-pvc.yaml
+++ b/kubernetes/apps/storage/nfs-pvc/nfs-movies-pvc.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs-tv-pv
-  namespace: media
+  name: nfs-movies
+  namespace: storage
 spec:
-  storageClassName: media-tv
+  storageClassName: nfs-movies
   capacity:
     storage: 1Mi
   accessModes:
@@ -13,7 +13,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: ${NAS_ADDR}
-    path: "/mnt/user/tv"
+    path: "/mnt/user/movies"
   mountOptions:
     - nfsvers=4.2
     - tcp
@@ -25,12 +25,12 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nfs-tv-pvc
-  namespace: media
+  name: nfs-movies
+  namespace: storage
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: media-tv
+  storageClassName: nfs-movies
   resources:
     requests:
       storage: 1Mi
