--- a/kubernetes/apps/storage/nfs-pvc/nfs-tv-pvc.yaml
+++ b/kubernetes/apps/storage/nfs-pvc/nfs-tv-pvc.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs-movies-pv
-  namespace: media
+  name: nfs-tv
+  namespace: storage
 spec:
-  storageClassName: media-movies
+  storageClassName: nfs-tv
   capacity:
     storage: 1Mi
   accessModes:
@@ -13,7 +13,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: ${NAS_ADDR}
-    path: "/mnt/user/movies"
+    path: "/mnt/user/tv"
   mountOptions:
     - nfsvers=4.2
     - tcp
@@ -25,12 +25,12 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nfs-movies-pvc
-  namespace: media
+  name: nfs-tv
+  namespace: storage
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: media-movies
+  storageClassName: nfs-tv
   resources:
     requests:
       storage: 1Mi
