--- a/kubernetes/apps/storage/kustomization.yaml
+++ b/kubernetes/apps/storage/kustomization.yaml
@@ -10,4 +10,4 @@ resources:
   - ./nfs-pvc/nfs-downloads-pvc.yaml
   - ./nfs-pvc/nfs-movies-pvc.yaml
   - ./nfs-pvc/nfs-calibre-pvc.yaml
-  - ./nfs-minio-pvc.yaml
+  - ./nfs-pvc/nfs-minio-pvc.yaml
