--- a/kubernetes/apps/media/radarr/app/kustomization.yaml
+++ b/kubernetes/apps/media/radarr/app/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 namespace: media
 resources:
   - ./externalsecret.yaml
+  - ./nfs-movies-pvc.yaml
   - ./helmrelease.yaml
 # configMapGenerator:
 #   - name: radarr-configmap
