--- a/kubernetes/apps/media/calibre-web/app/kustomization.yaml
+++ b/kubernetes/apps/media/calibre-web/app/kustomization.yaml
@@ -3,7 +3,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: media
 resources:
-  - helmrelease.yaml
+  - ./nfs-calibre-pvc.yaml
+  - ./helmrelease.yaml
 patches:
   - path: https://raw.githubusercontent.com/grantok/flux/master/kubernetes/flux/config/patch-ss.yaml
     target:
