--- a/kubernetes/apps/storage/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/minio/app/helmrelease.yaml
@@ -26,7 +26,7 @@ spec:
     env:
       TZ: America/Chicago
       MINIO_UPDATE: "off"
-      MINIO_PROMETHEUS_URL: http://kube-prometheus-stack-prometheus.monitoring.monitoring:9090
+      MINIO_PROMETHEUS_URL: http://kube-prometheus-stack-prometheus.monitoring:9090
       MINIO_PROMETHEUS_JOB_ID: minio
       MINIO_BROWSER_REDIRECT_URL: https://minio.${SECRET_DOMAIN}
       MINIO_SERVER_URL: https://s3.${SECRET_DOMAIN}
