--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -18,3 +18,4 @@ resources:
   - ./weave-gitops.yaml
   - ./fairwinds.yaml
   - ./nfs-subdir-external-provisioner.yaml
+  - ./node-feature-discovery.yaml
