--- a/kubernetes/apps/media/tdarr-node/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tdarr-node/app/helmrelease.yaml
@@ -2,45 +2,49 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: &app tdarr
+  name: &app tdarr-node
   namespace: media
 spec:
+  interval: 15m
+  maxHistory: 3
+  install:
+    createNamespace: true
+    remediation:
+      retries: 3
+  upgrade:
+    cleanupOnFail: true
+    remediation:
+      retries: 3
+  uninstall:
+    keepHistory: false
+
   values:
+    controller:
+      replicas: 3
+      type: statefulset
+      annotations:
+        reloader.stakater.com/auto: "true"
     image:
-      repository: haveagitgat/tdarr
+      repository: haveagitgat/tdarr_node
       tag: 2.00.18
 
     env:
       TZ: ${TIMEZONE}
+      serverIP: tdarr.media
+      serverPort: 8266
 
     service:
       main:
         ports:
           http:
-            port: 8265
-          server:
-            enabled: true
             protocol: TCP
             port: 8266
-
-    ingress:
-      main:
-        annotations:
-          # cert-manager.io/cluster-issuer: letsencrypt-production
-          hajimari.io/icon: mdi:transit-connection-variant
 
     volumeClaimTemplates:
       - name: config
         mountPath: /app/configs
         accessMode: ReadWriteOnce
         size: 1Gi
-        storageClass: longhorn
-        labels:
-          snapshot.home.arpa/enabled: "true"
-      - name: data
-        mountPath: /app/server
-        accessMode: ReadWriteOnce
-        size: 15Gi
         storageClass: longhorn
         labels:
           snapshot.home.arpa/enabled: "true"
@@ -85,29 +89,12 @@ spec:
                   operator: In
                   values:
                     - "true"
-
-    additionalContainers:
-      node:
-        name: node
-        image: haveagitgat/tdarr_node:2.00.18
-        imagePullPolicy: IfNotPresent
-        env:
-          - name: TZ
-            value: ${TIMEZONE}
-          - name: nodeID
-            value: node
-          - name: serverIP
-            value: localhost
-          - name: serverPort
-            value: 8266
-        volumeMounts:
-          - name: config
-            mountPath: /app/configs
-          - name: data
-            mountPath: /app/server
-          - name: tv
-            mountPath: /tv
-          - name: movies
-            mountPath: /movies
-          - name: cache
-            mountPath: /tcache
+      podAntiAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+                - key: app.kubernetes.io/instance
+                  operator: In
+                  values:
+                    - "tdarr"
+                    - "tdarr-node"
