--- a/kubernetes/apps/storage/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/minio/app/helmrelease.yaml
@@ -104,7 +104,7 @@ spec:
           nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
           nginx.ingress.kubernetes.io/configuration-snippet: |
             chunked_transfer_encoding off;
-          hajimari.io/enable: "true"
+          # hajimari.io/enable: "true"
         hosts:
           - host: &host-api "s3.${SECRET_DOMAIN}"
             paths:
