--- a/kubernetes/apps/media/tdarr-node/app/kustomization.yaml
+++ b/kubernetes/apps/media/tdarr-node/app/kustomization.yaml
@@ -9,7 +9,7 @@ generatorOptions:
   disableNameSuffixHash: true
   annotations:
     kustomize.toolkit.fluxcd.io/substitute: disabled
-patches:
-  - path: https://raw.githubusercontent.com/grantok/flux/master/kubernetes/flux/config/patch-chart-with-ingress.yaml
-    target:
-      kind: HelmRelease
+# patches:
+#   - path: https://raw.githubusercontent.com/grantok/flux/master/kubernetes/flux/config/patch-chart-with-ingress.yaml
+#     target:
+#       kind: HelmRelease
