--- a/kubernetes/apps/media/tdarr-node/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tdarr-node/app/helmrelease.yaml
@@ -6,6 +6,14 @@ metadata:
   namespace: media
 spec:
   interval: 15m
+  chart:
+    spec:
+      chart: app-template
+      version: 1.2.1
+      sourceRef:
+        kind: HelmRepository
+        name: bjw-s
+        namespace: flux-system
   maxHistory: 3
   install:
     createNamespace: true
