--- a/kubernetes/apps/media/tdarr-node/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tdarr-node/app/helmrelease.yaml
@@ -119,3 +119,4 @@ spec:
                   values:
                     - "tdarr"
                     - "tdarr-node"
+              topologyKey: "kubernetes.io/hostname"
