--- a/kubernetes/flux/config/patch-ss.yaml
+++ b/kubernetes/flux/config/patch-ss.yaml
@@ -3,6 +3,9 @@
   path: /spec/interval
   value: 15m
 - op: add
+  path: /spec/timeout
+  value: 2m
+- op: add
   path: /spec/maxHistory
   value: 3
 - op: add
