--- a/kubernetes/apps/media/tdarr-node/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tdarr-node/app/helmrelease.yaml
@@ -55,6 +55,10 @@ spec:
           - hosts:
               - *host
 
+    service:
+      main:
+        enabled: true
+
     volumeClaimTemplates:
       - name: config
         mountPath: /app/configs
