--- a/kubernetes/apps/media/tdarr-node/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tdarr-node/app/helmrelease.yaml
@@ -57,7 +57,9 @@ spec:
 
     service:
       main:
-        enabled: true
+        ports:
+          http:
+            enabled: false
 
     volumeClaimTemplates:
       - name: config
