--- a/kubernetes/apps/media/tdarr-node/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tdarr-node/app/helmrelease.yaml
@@ -56,7 +56,7 @@ spec:
               - *host
 
     service:
-      enabled: false
+      enabled: "false"
       main:
         ports:
           http:
