--- a/kubernetes/apps/media/tdarr-node/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tdarr-node/app/helmrelease.yaml
@@ -57,8 +57,9 @@ spec:
 
     service:
       main:
-        enabled: "false"
+        enabled: false
         ports:
+          enabled: false
           http:
             port: 8265
 
