--- a/kubernetes/apps/media/tdarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tdarr/app/helmrelease.yaml
@@ -12,6 +12,8 @@ spec:
 
     env:
       TZ: ${TIMEZONE}
+      NVIDIA_DRIVER_CAPABILITIES: "all"
+      NVIDIA_VISIBLE_DEVICE: "all"
 
     service:
       main:
