--- a/kubernetes/apps/monitoring/goldilocks/ks.yaml
+++ b/kubernetes/apps/monitoring/goldilocks/ks.yaml
@@ -7,8 +7,8 @@ metadata:
   labels:
     substitution.flux.home.arpa/enabled: "true"
 spec:
-  dependsOn:
-    - name: cluster-apps-vpa
+  # dependsOn:
+  #   - name: cluster-apps-vpa
   path: ./kubernetes/apps/monitoring/goldilocks/app
   prune: true
   sourceRef:
