--- a/kubernetes/apps/monitoring/goldilocks/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/goldilocks/app/helmrelease.yaml
@@ -32,8 +32,10 @@ spec:
         ingressClassName: nginx
         annotations:
           hajimari.io/icon: mdi:align-vertical-top
+          nginx.ingress.kubernetes.io/whitelist-source-range: |
+            10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
         hosts:
-          - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
+          - host: &host "goldilocks.${SECRET_DOMAIN}"
             paths:
               - path: /
                 type: Prefix
