--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -6,6 +6,7 @@ metadata:
 stringData:
     SECRET_DOMAIN: ENC[AES256_GCM,data:p4dN3funpWzsxKcthcFvyFLTQg==,iv:da77mlbjD5qyZGQJJzubSYAKYTxjpek4ziZYS6Wn3EI=,tag:7vC1HS3p81qcXYh9mLDj8Q==,type:str]
     SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:3EYaZX/4Tu1ov50edYoETE0OlY2rHFOUqBgObw==,iv:wrYCmM12tRkmSQRyBS6l+sM+Nt7ceTnLpA+76XBLSJo=,tag:xnvUSw8OyMeFhUGh0Ehedg==,type:str]
+    SECRET_TUNNEL_ID: ENC[AES256_GCM,data:y2d+r5bAFoVux/fYQ5zKk9JCgdG2VBpJapFdC5kYjU8ng0T/,iv:ixG4ZWtdTIo8+F0D+tcDhzAp2EZ9aVsR9M+9KCQGf9c=,tag:E3Xgz+7jcgAQGgSJmkB6Nw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +22,8 @@ sops:
             YXplMEp4OE8yWWsycDZLb2VWNmRDTTgKugX/AvgeyfjcrobSiwmnX8B47ZN7DKl0
             +9OVLwy1uczOS22VEHLm5KbJ85aDAox17GBq/7uyvVpSNP5NOPPK1g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-09T20:02:01Z"
-    mac: ENC[AES256_GCM,data:PoV0kLtAl71Pw7eMkoD2m9US5ZrlEswpMPs/+ltvqGIwLLe2QsE2gPC+TmYPNJM+cUmiXj1Wuoew727O3BdSiHFdsE7ZW4rDTqXiiQN+l1fBbEAZzuEGNnVE35Dn1sxIb7qQ5E88HKKhIQ/44MZlr2s+paquTkteNmyUldy5BbA=,iv:WTi4EH1IhHXvKvDNIlBoF0dHMxbG3siXy5dG8H9ez0E=,tag:I7ITpBNz0oKkcvFXRNV6dg==,type:str]
+    lastmodified: "2023-02-03T22:25:41Z"
+    mac: ENC[AES256_GCM,data:QVZZjZEuxb6Cvw2YsUQE0J7hCiCmspGuDZvp76FzS4ryIYh7UENP4mJWBdMmaU+M4irBKfzZbHqPlO9P9apn7GmzYSe7MP0krPEzSNZS5tpp3PGun75QErhUwyHZQsixXuGSNNCNNV5sM5US0/6Zfil86gOjt5nE0+KtUjNHzHE=,iv:8H+hL5Os8j5DRvkAW0FSK8+fiAhpL0PBtXrD4yF7iEY=,tag:xGE4IYlsDeTqrta3hLambw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
