cf tunnel token

--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -7,6 +7,7 @@ stringData:
     SECRET_DOMAIN: ENC[AES256_GCM,data:p4dN3funpWzsxKcthcFvyFLTQg==,iv:da77mlbjD5qyZGQJJzubSYAKYTxjpek4ziZYS6Wn3EI=,tag:7vC1HS3p81qcXYh9mLDj8Q==,type:str]
     SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:3EYaZX/4Tu1ov50edYoETE0OlY2rHFOUqBgObw==,iv:wrYCmM12tRkmSQRyBS6l+sM+Nt7ceTnLpA+76XBLSJo=,tag:xnvUSw8OyMeFhUGh0Ehedg==,type:str]
     SECRET_TUNNEL_ID: ENC[AES256_GCM,data:y2d+r5bAFoVux/fYQ5zKk9JCgdG2VBpJapFdC5kYjU8ng0T/,iv:ixG4ZWtdTIo8+F0D+tcDhzAp2EZ9aVsR9M+9KCQGf9c=,tag:E3Xgz+7jcgAQGgSJmkB6Nw==,type:str]
+    SECRET_TUNNEL_TOKEN: ENC[AES256_GCM,data:RPT/wgHKTrs90aJGQsMNkZJ9mVihUGuk3nnuKHFUSMCmPcU/czEGoIxmMUDqh89HHbjYg/2A2D2CpiOAo0rhu18m03CBjo96j95XK4miZzIaz97jpr2gT0/Xt3V8aGfQWG++J3ngvKKZJQekobrWp3kyS9qAM+hw1zAeKJnYSy6G3tOUoCyWWONT+HnxoNF7JYYbCo0B6B1I6hNd2W0PuULZGPkOxyCrfnxbb/JDgHcz6HpU1ihyUQ==,iv:URZE1wBWdSndOCM7cBoyXD3ShzpYt9NKh6oC00IDlfY=,tag:S1EilL9NL9bccLvlaP5lxw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +23,8 @@ sops:
             YXplMEp4OE8yWWsycDZLb2VWNmRDTTgKugX/AvgeyfjcrobSiwmnX8B47ZN7DKl0
             +9OVLwy1uczOS22VEHLm5KbJ85aDAox17GBq/7uyvVpSNP5NOPPK1g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-03T22:25:41Z"
-    mac: ENC[AES256_GCM,data:QVZZjZEuxb6Cvw2YsUQE0J7hCiCmspGuDZvp76FzS4ryIYh7UENP4mJWBdMmaU+M4irBKfzZbHqPlO9P9apn7GmzYSe7MP0krPEzSNZS5tpp3PGun75QErhUwyHZQsixXuGSNNCNNV5sM5US0/6Zfil86gOjt5nE0+KtUjNHzHE=,iv:8H+hL5Os8j5DRvkAW0FSK8+fiAhpL0PBtXrD4yF7iEY=,tag:xGE4IYlsDeTqrta3hLambw==,type:str]
+    lastmodified: "2023-02-03T23:58:34Z"
+    mac: ENC[AES256_GCM,data:fg5kth0qRaKIuDl3avzoChx0pXRBeDhjSv3WehDtVKi8ZRCEZ5zgJK2qBXq3z+LgoeQMlal5BTwlnOyR7l+3LHELSDdN2cIF2Tq4ITjNKT5ZneZ5E5ggoUaXgMRuxKrmI31MoBCltuNk3JorgD5GWoKi5VvqE6IVXgcT+e7C8OI=,iv:0qoGhviNcODFIvk72RKvKOuTv4t6QNWCaMdOcS2HVAg=,tag:s4/DGxiYmybRR4G6qEJZxg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
