--- a/kubernetes/flux/apps.yaml
+++ b/kubernetes/flux/apps.yaml
@@ -39,4 +39,7 @@ spec:
               - kind: Secret
                 name: cluster-secrets
       target:
+        group: kustomize.toolkit.fluxcd.io
+        version: v1beta2
+        kind: Kustomization
         labelSelector: substitution.flux.home.arpa/enabled=true
