--- a/kubernetes/apps/default/kubernetes-schemas/app/helmrelease.yaml
+++ b/kubernetes/apps/default/kubernetes-schemas/app/helmrelease.yaml
@@ -43,7 +43,7 @@ spec:
         ingressClassName: nginx
         annotations:
           # cert-manager.io/cluster-issuer: letsencrypt-production
-          external-dns.home.arpa/enabled: "true"
+          # external-dns.home.arpa/enabled: "true"
           hajimari.io/icon: mdi:code-json
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
