--- a/kubernetes/flux/apps.yaml
+++ b/kubernetes/flux/apps.yaml
@@ -42,4 +42,4 @@ spec:
         group: kustomize.toolkit.fluxcd.io
         version: v1beta2
         kind: Kustomization
-        labelSelector: substitution.flux.home.arpa/enabled=true
+        labelSelector: substitution.flux.home.arpa/disabled notin (true)
