--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -4,6 +4,15 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
+  - ./alertmanager/ks.yaml
+  - ./blackbox-exporter/ks.yaml
+  - ./goldilocks/ks.yaml
+  - ./grafana/ks.yaml
+  - ./kube-prometheus-stack/ks.yaml
+  - ./loki/ks.yaml
+  - ./speed-exporter/ks.yaml
+  - ./thanos/ks.yaml
+  - ./vector/ks.yaml
+  - ./vpa/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
   - ./uptime-kuma/ks.yaml
-  - ./goldilocks/ks.yaml
