--- a/kubernetes/apps/monitoring/vpa/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/vpa/app/helmrelease.yaml
@@ -40,9 +40,9 @@ spec:
       extraArgs:
         pod-recommendation-min-cpu-millicores: 15
         pod-recommendation-min-memory-mb: 61
-        # storage: prometheus
-        # prometheus-address: |-
-          # http://thanos-query.monitoring.svc.cluster.local:9090
+        storage: prometheus
+        prometheus-address: |-
+          http://thanos-query.monitoring.svc.cluster.local:9090
     updater:
       enabled: false
     admissionController:
