--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -6,6 +6,8 @@ resources:
   - ./bjw-s.yaml
   - ./external-dns.yaml
   - ./external-secrets.yaml
+  - ./fairwinds.yaml
+  - ./grafana.yaml
   - ./hajimari.yaml
   - ./ingress-nginx.yaml
   - ./jetstack.yaml
@@ -14,8 +16,9 @@ resources:
   - ./longhorn.yaml
   - ./metallb.yaml
   - ./metrics-server.yaml
-  - ./stakater.yaml
-  - ./weave-gitops.yaml
-  - ./fairwinds.yaml
   - ./nfs-subdir-external-provisioner.yaml
   - ./node-feature-discovery.yaml
+  - ./prometheus-community.yaml
+  - ./stakater.yaml
+  - ./vector.yaml
+  - ./weave-gitops.yaml
