--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -125,6 +125,8 @@ spec:
     ingress:
       enabled: true
       ingressClassName: nginx
+      annotations:
+        hajimari.io/icon: graph
       hosts:
         - &host "grafana.${SECRET_DOMAIN}"
       tls:
