--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -106,6 +106,8 @@ spec:
       ingress:
         enabled: true
         ingressClassName: "nginx"
+        annotations:
+          hajimari.io/icon: gate-and
         hosts:
           - host: &host "loki.${SECRET_DOMAIN}"
             paths:
