--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -158,20 +158,20 @@ spec:
     test:
       enabled: false
 
-  # valuesFrom:
-  #   - kind: Secret
-  #     name: loki-secret
-  #     valuesKey: S3_BUCKET_NAME
-  #     targetPath: loki.structuredConfig.common.storage.s3.bucketnames
-  #   - kind: Secret
-  #     name: loki-secret
-  #     valuesKey: S3_BUCKET_HOST
-  #     targetPath: loki.structuredConfig.common.storage.s3.endpoint
-  #   - kind: Secret
-  #     name: loki-secret
-  #     valuesKey: S3_ACCESS_KEY
-  #     targetPath: loki.structuredConfig.common.storage.s3.access_key_id
-  #   - kind: Secret
-  #     name: loki-secret
-  #     valuesKey: S3_SECRET_KEY
-  #     targetPath: loki.structuredConfig.common.storage.s3.secret_access_key
+  valuesFrom:
+    - kind: Secret
+      name: loki-secret
+      valuesKey: S3_BUCKET_NAME
+      targetPath: loki.structuredConfig.common.storage.s3.bucketnames
+    - kind: Secret
+      name: loki-secret
+      valuesKey: S3_BUCKET_HOST
+      targetPath: loki.structuredConfig.common.storage.s3.endpoint
+    - kind: Secret
+      name: loki-secret
+      valuesKey: S3_ACCESS_KEY
+      targetPath: loki.structuredConfig.common.storage.s3.access_key_id
+    - kind: Secret
+      name: loki-secret
+      valuesKey: S3_SECRET_KEY
+      targetPath: loki.structuredConfig.common.storage.s3.secret_access_key
