--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -146,7 +146,7 @@ spec:
 
     podAnnotations:
       configmap.reloader.stakater.com/reload: grafana
-      secret.reloader.stakater.com/reload: grafana-secrets
+      # secret.reloader.stakater.com/reload: grafana-secrets
 
     rbac:
       pspEnabled: false
