--- a/kubernetes/apps/monitoring/vector/agent/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/vector/agent/helmrelease.yaml
@@ -36,15 +36,15 @@ spec:
         kubernetes_logs:
           type: kubernetes_logs
 
-        talos_kernel_logs:
-          type: socket
-          mode: udp
-          address: 127.0.0.1:12000
+        # talos_kernel_logs:
+        #   type: socket
+        #   mode: udp
+        #   address: 127.0.0.1:12000
 
-        talos_service_logs:
-          type: socket
-          mode: udp
-          address: 127.0.0.1:12001
+        # talos_service_logs:
+        #   type: socket
+        #   mode: udp
+        #   address: 127.0.0.1:12001
 
       # Sinks
       sinks:
@@ -55,19 +55,19 @@ spec:
           address: "vector-aggregator.monitoring:6000"
           version: "2"
 
-        talos_kernel_sink:
-          type: vector
-          inputs:
-            - talos_kernel_logs
-          address: "vector-aggregator.monitoring:6050"
-          version: "2"
+        # talos_kernel_sink:
+        #   type: vector
+        #   inputs:
+        #     - talos_kernel_logs
+        #   address: "vector-aggregator.monitoring:6050"
+        #   version: "2"
 
-        talos_service_sink:
-          type: vector
-          inputs:
-            - talos_service_logs
-          address: "vector-aggregator.monitoring:6051"
-          version: "2"
+        # talos_service_sink:
+        #   type: vector
+        #   inputs:
+        #     - talos_service_logs
+        #   address: "vector-aggregator.monitoring:6051"
+        #   version: "2"
 
     podMonitor:
       enabled: true
