--- a/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
@@ -14,15 +14,18 @@ spec:
     template:
       engineVersion: v2
       data:
-        GF_AUTH_GENERIC_OAUTH_CLIENT_ID: "{{ .auth0_generic_client_id }}"
-        GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: "{{ .auth0_generic_client_secret }}"
-        GF_AUTH_GENERIC_OAUTH_AUTH_URL: "{{ .auth0_bjws_domain }}/authorize"
-        GF_AUTH_GENERIC_OAUTH_TOKEN_URL: "{{ .auth0_bjws_domain }}/oauth/token"
-        GF_AUTH_GENERIC_OAUTH_API_URL: "{{ .auth0_bjws_domain }}/userinfo"
+        # GF_AUTH_GENERIC_OAUTH_CLIENT_ID: "{{ .auth0_generic_client_id }}"
+        # GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: "{{ .auth0_generic_client_secret }}"
+        # GF_AUTH_GENERIC_OAUTH_AUTH_URL: "{{ .auth0_bjws_domain }}/authorize"
+        # GF_AUTH_GENERIC_OAUTH_TOKEN_URL: "{{ .auth0_bjws_domain }}/oauth/token"
+        # GF_AUTH_GENERIC_OAUTH_API_URL: "{{ .auth0_bjws_domain }}/userinfo"
+        # S3_ACCESS_KEY: "{{ .minio_loki_access_key }}"
+        GF_SECURITY_ADMIN_USER: "{{ .grafana_admin_user }}"
+        GF_SECURITY_ADMIN_PASSWORD: "{{ .grafana_admin_password }}"
   dataFrom:
     - extract:
-        key: auth0
+        key: grafana
       rewrite:
         - regexp:
             source: "(.*)"
-            target: "auth0_$1"
+            target: "grafana_$1"
