--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -83,7 +83,7 @@ spec:
       GF_SECURITY_COOKIE_SAMESITE: grafana
       GF_SERVER_ROOT_URL: "https://grafana.${SECRET_DOMAIN}"
 
-    # envFromSecret: grafana-secrets
+    envFromSecret: grafana-secrets
 
     grafana.ini:
       analytics:
@@ -146,7 +146,7 @@ spec:
 
     podAnnotations:
       configmap.reloader.stakater.com/reload: grafana
-      # secret.reloader.stakater.com/reload: grafana-secrets
+      secret.reloader.stakater.com/reload: grafana-secrets
 
     rbac:
       pspEnabled: false
