--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -145,7 +145,7 @@ spec:
       - grafana-clock-panel
 
     podAnnotations:
-      configmap.reloader.stakater.com/reload: grafana
+      # configmap.reloader.stakater.com/reload: grafana
       secret.reloader.stakater.com/reload: grafana-secrets
 
     rbac:
