--- a/kubernetes/apps/monitoring/loki/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/loki/app/externalsecret.yaml
@@ -21,7 +21,7 @@ spec:
         S3_SECRET_KEY: "{{ .minio_loki_secret_key }}"
   dataFrom:
     - extract:
-        key: Minio
+        key: minio
       rewrite:
         - regexp:
             source: "(.*)"
