--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   - ./goldilocks/ks.yaml
   - ./grafana/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
-  # - ./loki/ks.yaml
+  - ./loki/ks.yaml
   - ./speedtest-exporter/ks.yaml
   - ./thanos/ks.yaml
   - ./vector/ks.yaml
