--- a/kubernetes/apps/storage/nfs-subdir-external-provisioner/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/nfs-subdir-external-provisioner/app/helmrelease.yaml
@@ -22,6 +22,13 @@ spec:
     nfs:
       server: "${NAS_ADDR}"
       path: "/mnt/user/nfs-storage"
+      mountOptions:
+        - nfsvers=4.2
+        - tcp
+        - intr
+        - hard
+        - noatime
+        - nodiratime
     storageClass:
       name: nfs-kube
       defaultClass: false
