changing lb  range from range to ip

--- a/kubernetes/flux/vars/cluster-settings.yaml
+++ b/kubernetes/flux/vars/cluster-settings.yaml
@@ -7,7 +7,7 @@ metadata:
 data:
   TIMEZONE: "America/Chicago"
   KUBE_VIP_ADDR: "10.173.254.30"
-  METALLB_LB_RANGE: "10.173.254.80-10.173.254.90"
+  METALLB_LB_RANGE: "10.173.254.80/28"
   METALLB_K8S_GATEWAY_ADDR: "10.173.254.80"
   METALLB_INGRESS_ADDR: "10.173.254.81"
   NAS_ADDR: "10.173.254.10"
