1pc ingress patch

--- a/kubernetes/apps/security/external-secrets/stores/onepassword/kustomization.yaml
+++ b/kubernetes/apps/security/external-secrets/stores/onepassword/kustomization.yaml
@@ -9,3 +9,7 @@ resources:
   - ./clustersecretstore.yaml
 patchesStrategicMerge:
   - ./patches/sync.yaml
+patches:
+  - path: https://raw.githubusercontent.com/grantok/flux/master/kubernetes/flux/config/patch-chart-with-ingress.yaml
+    target:
+      kind: HelmRelease
