--- a/kubernetes/apps/security/external-secrets/stores/onepassword/kustomization.yaml
+++ b/kubernetes/apps/security/external-secrets/stores/onepassword/kustomization.yaml
@@ -7,6 +7,10 @@ resources:
   - ./secret.sops.yaml
   - ./helmrelease.yaml
   - ./clustersecretstore.yaml
+generatorOptions:
+  disableNameSuffixHash: true
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
 patchesStrategicMerge:
   - ./patches/sync.yaml
 patches:
