--- a/kubernetes/apps/default/theme-park/app/kustomization.yaml
+++ b/kubernetes/apps/default/theme-park/app/kustomization.yaml
@@ -5,6 +5,10 @@ kind: Kustomization
 namespace: default
 resources:
   - ./helmrelease.yaml
+generatorOptions:
+  disableNameSuffixHash: true
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
 patches:
   - path: https://raw.githubusercontent.com/grantok/flux/master/kubernetes/flux/config/patch-ss.yaml
     target:
