--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -5,7 +5,6 @@ metadata:
   name: hajimari
   namespace: default
 spec:
-  interval: 15m
   chart:
     spec:
       chart: hajimari
@@ -14,17 +13,6 @@ spec:
         kind: HelmRepository
         name: hajimari
         namespace: flux-system
-  maxHistory: 3
-  install:
-    createNamespace: true
-    remediation:
-      retries: 3
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 3
-  uninstall:
-    keepHistory: false
   values:
     hajimari:
       title: Apps
@@ -49,22 +37,14 @@ spec:
           - flux-system
     ingress:
       main:
-        enabled: true
-        ingressClassName: nginx
         annotations:
           # cert-manager.io/cluster-issuer: letsencrypt-production
           nginx.ingress.kubernetes.io/whitelist-source-range: |
             10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
           hajimari.io/enable: "false"
-        hosts:
-          - host: &host "hajimari.${SECRET_DOMAIN}"
-            paths:
-              - path: /
-                pathType: Prefix
-        tls:
-          - hosts:
-              - *host
-            # secretName: hajimari-tls
+        # tls:
+          # - hosts:
+              # - *host
     podAnnotations:
       configmap.reloader.stakater.com/reload: hajimari-settings
     persistence:
