--- a/kubernetes/apps/monitoring/loki/ks.yaml
+++ b/kubernetes/apps/monitoring/loki/ks.yaml
@@ -5,6 +5,7 @@ metadata:
   name: cluster-apps-loki
   namespace: flux-system
 spec:
+  suspend: true
   interval: 10m
   path: ./kubernetes/apps/monitoring/loki/app
   prune: true
