--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -1,9 +1,9 @@
 ---
-apiVersion: kustomize.config.k8s.io/v1beta1
+apiVersion: kustomize.config.k8s.io/v1beta1beta2
 kind: Kustomization
 resources:
   - ./authentik.yaml
-  # - ./bitnami.yaml
+  - ./bitnami.yaml
   - ./bjw-s.yaml
   - ./external-dns.yaml
   - ./external-secrets.yaml
